# nwiz

./: .vercelignore  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  vercel.json  vite-env.d.ts  vite.config.ts
assets/: nwiz.pts
assets/script/: nwiz.js  nwiz.pts
public/: robots.txt  site.webmanifest  sitemap.xml
src/: fonts.css  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/app/: about.tsx  index.tsx  layout.tsx  saved.tsx
src/components/: footer.tsx  link.tsx  navbar.tsx  tauri-link.tsx  welcome.tsx
src/components/network/: commands.tsx  enter-hint.tsx  export.tsx  import.tsx  issues.tsx  reset.tsx  settings.tsx
src/components/theme/: menu.tsx  provider.tsx
src/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  button-group.tsx  button.tsx  dialog.tsx  empty.tsx  form.tsx  highlighted-pre.tsx  input.tsx  kbd.tsx  pre.tsx  sonner.tsx
src/constants/: crawlers.ts  devices.ts  interfaces.ts  urls.ts
src/context/: theme.ts
src/hooks/: use-add-end-device.ts  use-add-pc.ts  use-add-router.ts  use-add-server.ts  use-add-switch.ts  use-connection.ts  use-connections.ts  use-device.ts  use-devices.ts  use-remove-connection.ts  use-remove-device.ts  use-theme.ts
src/lib/: commands.ts  dexie.ts  encode.ts  network.ts  utils.ts  validation.ts  visualize.ts
src/lib/commands/: auto-routing.ts  auto-switchport.ts  index.ts  types.ts
src/lib/validation/: connections.ts  devices.ts  index.ts  types.ts  utils.ts
src/lib/visualization/: graph.ts  (+1 more)
src/stores/: network.ts  welcome.ts
(+43 files in other folders)
