[package]
name = "nwiz"
version = "1.0.0-beta.7"
description = "A tool for generating Cisco IOS scripts from a network topology you build or import."
authors = ["itsbrunodev"]
license = "GPL-3.0"
repository = "https://github.com/itsbrunodev/nwiz"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
